test/good/arrays/comprehension12.px

print [x for x in [1, 2][::-1]]
