test/bad/dictionaries/comprehension04.px

{for x in [] yield 1..1: x}
